--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "tts",
     "stt"
   ],
-  "homepage": "https://github.com/lobehub/lobe-chat",
+  "homepage": "https://github.com/Chieh-W",
   "bugs": {
-    "url": "https://github.com/lobehub/lobe-chat/issues/new/choose"
+    "url": "https://chieh.pro/2023/01/01/%E5%8F%8D%E9%A6%88/"
   },
   "repository": {
     "type": "git",
