--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@lobehub/chat",
+  "name": "@lhub/chat",
   "version": "0.122.6",
-  "description": "Lobe Chat - an open-source, high-performance chatbot framework that supports speech synthesis, multimodal, and extensible Function Call plugin system. Supports one-click free deployment of your private ChatGPT/LLM web application.",
+  "description": "Chat - an open-source, high-performance chatbot framework that supports speech synthesis, multimodal, and extensible Function Call plugin system. Supports one-click free deployment of your private ChatGPT/LLM web application.",
   "keywords": [
     "framework",
     "chatbot",
@@ -23,7 +23,7 @@
     "url": "https://github.com/lobehub/lobe-chat.git"
   },
   "license": "MIT",
-  "author": "LobeHub <i@lobehub.com>",
+  "author": "LHub <i@lhub.com>",
   "sideEffects": false,
   "scripts": {
     "build": "next build",
